--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -4,6 +4,7 @@
 		<title>My App</title>
 
 		<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+		<link rel="stylesheet" href="bootstrap/css/bootstrap-dropdown.css">
 		<link rel="stylesheet" href="bootstrap/css/bootstrap-breadcrumb.css">
 		<link rel="stylesheet" href="fontawesome/css/fontawesome.css">
 		<link rel="stylesheet" href="fontawesome/css/brands.css">
@@ -44,6 +45,26 @@
 			<button type="button" class="btn btn-primary rounded-circle" aria-label="Add file">
 				<i class="fas fa-plus fa-4x"></i>
 			</button>
+			<input type="file" id="file_input" class="d-none" aria-label="File upload"/>
+		</div>
+
+		<!-- Options Menu -->
+		<div id="options_menu" class="position-fixed d-flex flex-column flex-md-row gap-4 align-items-center justify-content-center">
+			<ul class="dropdown-menu d-block position-static mx-0 shadow w-220px">
+				<li>
+					<a class="dropdown-item d-flex gap-2 align-items-center" href="#">
+						<i class="fa-solid fa-plus"></i>
+						Nova Pasta
+					</a>
+				</li>
+				<li><hr class="dropdown-divider"></li>
+				<li>
+					<a class="dropdown-item dropdown-item-danger d-flex gap-2 align-items-center" href="#">
+						<i class="fa-solid fa-trash"></i>
+						Deletar
+					</a>
+				</li>
+			</ul>
 		</div>
 	</body>
 </html>
